Day 1 MVP Goal Complete: Finish SearchBar implementation (without functionality)

--- a/instagram/src/index.css
+++ b/instagram/src/index.css
@@ -1,1 +1,23 @@
 /** GLOBAL STYLES **/
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, 
+    "Roboto", "Helvetica Neue", "Ubuntu", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 1.6rem;
+    background-color: #FAFAFA;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
