Day 1 MVP Complete: Finished all MVP goals for Day 1.

--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -1,11 +1,12 @@
 .post-container {
     max-width: 950px;
     margin: 0 auto;
+    margin-bottom: 60px;
 }
 
 .post-card {
-    width: 70%;
-    margin-top: 50px;
+    width: 65%;
+    margin-top: 60px;
     border: 1px solid #E6E6E6;
     border-radius: 3px;
     background-color: #FFF;
