--- a/instagram/src/components/Login/Login.css
+++ b/instagram/src/components/Login/Login.css
@@ -2,23 +2,30 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .login-form {
-    width: 375px;
-    height: 375px;
+    width: 325px;
+    height: 325px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     border: 1px solid #E6E6E6;
     border-radius: 3px;
     background-color: #FFF;
+    padding: 20px 0;
 }
 
 .insta-logo {
+    width: 50%;
+}
+
+.input-container {
+    margin: 0 auto;
     width: 50%;
 }
 
@@ -39,6 +46,7 @@
     border-radius: 3px;
     height: 30px;
     width: 50%;
+    margin-top: 10px;
     background-color: #3B96EF;
     color: #FFF;
     font-weight: bold;
@@ -46,4 +54,23 @@
 
 .login-button:hover {
     cursor: pointer;
+}
+
+.appstore-container {
+    width: 325px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.appstore-container p {
+    font-size: 1.5rem;
+    margin: 20px 0;
+}
+
+@media(max-width: 600px) {
+    .big-img {
+        display: none;
+    }
 }
