--- a/instagram/src/components/Login/Login.css
+++ b/instagram/src/components/Login/Login.css
@@ -2,9 +2,12 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.login-content {
+    margin-left: 30px;
 }
 
 .login-form {
@@ -69,8 +72,11 @@
     margin: 20px 0;
 }
 
-@media(max-width: 600px) {
-    .big-img {
+@media(max-width: 750px) {
+    .login-content {
+        margin: 0;
+    }
+    .phones-img {
         display: none;
     }
 }
