--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -28,11 +28,13 @@
 
 .user-img-container {
     width: 38px;
+    height: 38px;
     margin: 0 2%;
 }
 
 .user-img {
     width: 100%;
+    height: 100%;
     border-radius: 50%;
 }
 
