--- a/instagram/src/index.css
+++ b/instagram/src/index.css
@@ -22,3 +22,12 @@ img {
     height: auto;
     max-height: 640px;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
