--- a/instagram/src/components/SearchBar/SearchBar.css
+++ b/instagram/src/components/SearchBar/SearchBar.css
@@ -2,6 +2,9 @@
     width: 100%;
     background-color: #FFF;
     border-bottom: 1px solid #E6E6E6;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
 .main-nav {
